--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,12 @@
       </button>
 
       <div class="collapse navbar-collapse mr-3" id="navbarTogglerDemo02">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <ul class="navbar-nav ml-auto mt-2 mt-md-0">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html"
-              >Home<span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -45,39 +43,29 @@
         </ul>
       </div>
     </nav>
-    <!--About Me-->
-    <main class="container-md m-3">
+    <!--Portfolio-->
+    <section class="container-md m-3">
       <div class="row">
-
         <div class="col-9 p-3 bg-light m-3">
           <section>
-            <h2 class="text-info">About Me</h2>
-            <hr>
-               <img 
-                    src="./assets/pic.jpg"
-                    class="img-fluid float-left mr-3"
-                    alt="ashley-headshot"
-                    style="max-width: 50%;"
-                />
-                 <p>
-                     Hi! I'm Ashley. Here's a little about me. I have always
-                      had a passion for creating content and solving problems.
-                      Recently, I have directed this passion in web development.
-                      I enjoy enhancing my abilities and learning new skills to
-                      further my career in computer programming.
-                      In my free time, I enjoy exploring new countries as well as spending time with friends and family.
-                </p>
-                <br>
-                 <p>
-                      I look forward to working with you in the future. Please
-                      contact me with any questions.
-                </p>
-             </section>
-        </div>
+            <header>
+              <h2 class="text-info">Portfolio</h2>
+              <hr>
+            </header>
 
-        <div class="col-md-3"></div>
+            <div class="row mx-md-n5 p-4">
+              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
+              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
+              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
+              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
+              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
+            </div>
+          </section> 
+        </div>   
+        
+        <div class="col-3"></div>
       </div>
-    </main>
+    </section> 
 
     <footer class="fixed-bottom">
       <div class="bg-info text-white p-2">
@@ -86,7 +74,6 @@
         </div>
       </div>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
