--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,23 @@
 
     <div class="container-md m-3">
       <div class="row">
-        <div class="col-9 p-3 bg-light m-3">
+        <div class="col-md-5 p-3 bg-light m-3">
+          <section>
+            <h2 class="text-info">Contact Information</h2>
+            <hr/>
+            <p>Email: <a href='mailto:ashley.d.deyoung@gmail.com'>ashley.d.deyoung@gmail.com</a></p>
+            <p>LinkedIn: <a href='https://www.linkedin.com/in/ashleydyches/'>ashleydyches</a></p>
+            <p>GitHub: <a href='https://github.com/ashleydeyoung'>ashleydeyoung</a></p>
+            <p>Resume: <a href='./assets/Resume2020.pdf'>Resume PDF</a></p>
+            
+
+
+
+          </section>
+        </div>
+        <div class="col-md-5 p-3 bg-light m-3">
           <div>
-            <h2 class="text-info">Contact</h2>
+            <h2 class="text-info">Contact Me</h2>
             <hr />
             <form>
               <!--contact Name-->
