--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="text-info">About Me</h2>
             <hr>
                <img 
-                    src="./assets/pic.jpg"
+                    src="./assets/images/pic.jpg"
                     class="img-fluid float-left mr-3"
                     alt="ashley-headshot"
                     style="max-width: 50%;"
