--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,34 @@
             </header>
 
             <div class="row mx-md-n5 p-4">
-              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
-              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
-              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
-              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
-              <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div>
+              <div class="col-12 col-md-6">
+                <div class="m-3 bg-light">
+                  <img class="img-fluid img-thumbnail" src="./assets/images/homePreview.png" alt="Project">
+                  <p class="project-text">Project 1: <a href='https://ashleydeyoung.github.io/Drinking-Bad/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/Drinking-Bad'>Repository</a></p>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="m-3 bg-light">
+                  <img class="img-fluid img-thumbnail" src="./assets/images/weather-dashboard.png" alt="weatherdashboards">
+                  <p class="project-text">Weather Dashboard <a href='https://ashleydeyoung.github.io/weatherdashboard/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/weatherdashboard'>Repository</a></p>
+
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="m-3 bg-light">
+                  <img class="img-fluid img-thumbnail" src="./assets/images/password.generator.application.png" alt="passwordgenerator">
+                  <p class="project-text">Password Generator <a href='https://ashleydeyoung.github.io/passwordgenerator/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/passwordgenerator'>Repository</a></p>
+
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="m-3 bg-light">
+                  <img class="img-fluid img-thumbnail" src="./assets/images/workday-scheduler.png" alt="workday-scheduler">
+                  <p class="project-text">Day Planner<a href='https://ashleydeyoung.github.io/dayplanner/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/dayplanner'>Repository</a></p>
+
+                </div>
+              </div>
+              <!-- <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div> -->
             </div>
           </section> 
         </div>   
