--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
               </div>
               <!--submit button-->
               <div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-bg">Submit</button>
               </div>
             </form>
           </div>
