--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,10 @@
 
                 </div>
               </div>
-              <!-- <div class="col-12 col-md-6"><div class="m-3 bg-light"><img class="img-fluid img-thumbnail" src="http://placehold.it/250x200" alt="img1"></div></div> -->
+              <div class="col-12 col-md-6">
+                <div class="m-3 bg-light">
+                  <img class="img-fluid img-thumbnail" src="./assets/images/burger-preview.png" alt="burger-app">
+                  <p class="project-text">Burger App<a href='https://frozen-beach-67804.herokuapp.com/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/burger'>Repository</a></p>
             </div>
           </section> 
         </div>   
