updated with project 2, updated resume, linkedin

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   </head>
   <body style="background-color: rgb(233, 225, 215);">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand bg-info p-3 ml-3" href="index.html"
+      <a class="navbar-brand colors p-3 ml-3" href="index.html"
         ><h3 class="text-white">Ashley DeYoung</h3></a
       >
       <button
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-5 p-3 bg-light m-3">
           <section>
-            <h2 class="text-info">Contact Information</h2>
+            <h2 class="text-color">Contact Information</h2>
             <hr/>
             <p>Email: <a href='mailto:ashley.d.deyoung@gmail.com'>ashley.d.deyoung@gmail.com</a></p>
             <p>LinkedIn: <a href='https://www.linkedin.com/in/ashleydyches/'>ashleydyches</a></p>
@@ -63,7 +63,7 @@
         </div>
         <div class="col-md-5 p-3 bg-light m-3">
           <div>
-            <h2 class="text-info">Contact Me</h2>
+            <h2 class="text-color">Contact Me</h2>
             <hr />
             <form>
               <!--contact Name-->
@@ -112,7 +112,7 @@
     </div>
 
     <footer class="fixed-bottom">
-      <div class="bg-info text-white p-2">
+      <div class="colors text-white p-2">
         <div style="text-align: center; left: 0; bottom: 0; width: 100%;">
           Copyright 2020 Ashley DeYoung
         </div>
