--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body style="background-color: rgb(233, 225, 215)">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand bg-info p-3 ml-3" href="index.html"
+      <a class="navbar-brand colors p-3 ml-3" href="index.html"
         ><h3 class="text-white">Ashley DeYoung</h3></a
       >
       <button
@@ -51,10 +51,10 @@
 
         <div class="col-9 p-3 bg-light m-3">
           <section>
-            <h2 class="text-info">About Me</h2>
+            <h2 class="text-color">About Me</h2>
             <hr>
                <img 
-                    src="./assets/images/pic.jpg"
+                    src="./assets/images/photo.jpg"
                     class="img-fluid float-left mr-3"
                     alt="ashley-headshot"
                     style="max-width: 50%;"
@@ -80,7 +80,7 @@
     </main>
 
     <footer class="fixed-bottom">
-      <div class="bg-info text-white p-2">
+      <div class="colors text-white p-2">
         <div style="text-align: center; left: 0; bottom: 0; width: 100%;">
           Copyright 2020 Ashley DeYoung
         </div>
