--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Ashley DeYoung Portfolio</title>
   </head>
-  <body style="background-color: rgb(233, 225, 215)">
+  <body style="background-color: rgb(233, 225, 215);">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand bg-info p-3 ml-3" href="index.html"
+      <a class="navbar-brand colors p-3 ml-3" href="index.html"
         ><h3 class="text-white">Ashley DeYoung</h3></a
       >
       <button
@@ -35,7 +35,9 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+            <a class="nav-link active" href="portfolio.html"
+              >Portfolio<span class="sr-only">(current)</span></a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -47,62 +49,163 @@
     <section class="container-md m-3">
       <div class="row">
         <div class="col-9 p-3 bg-light m-3">
-          <section>
-            <header>
-              <h2 class="text-info">Portfolio</h2>
-              <hr>
-            </header>
+          <header>
+            <h2 class="text-color">Portfolio</h2>
+            <hr />
+          </header>
 
-            <div class="row mx-md-n5 p-4">
-              <div class="col-12 col-md-6">
-                <div class="m-3 bg-light">
-                  <img class="img-fluid img-thumbnail" src="./assets/images/homePreview.png" alt="Project">
-                  <p class="project-text">Project 1: <a href='https://ashleydeyoung.github.io/Drinking-Bad/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/Drinking-Bad'>Repository</a></p>
-                </div>
+          <div class="row mx-md-n5 p-4">
+            <div class="col-md-6">
+              <div class="m-3 bg-light">
+                <img
+                  class="img-fluid img-thumbnail"
+                  src="./assets/images/homePreview.png"
+                  alt="Project"
+                />
+                <p class="project-text">
+                  Project 1: Drinkin' Bad 
+                  <a href="https://ashleydeyoung.github.io/Drinking-Bad/"
+                    >Deployed Site</a
+                  >
+                </p>
+                <p class="project-text">
+                  GitHub:
+                  <a href="https://github.com/ashleydeyoung/Drinking-Bad"
+                    >Repository</a
+                  >
+                </p>
               </div>
-              <div class="col-12 col-md-6">
-                <div class="m-3 bg-light">
-                  <img class="img-fluid img-thumbnail" src="./assets/images/weather-dashboard.png" alt="weatherdashboards">
-                  <p class="project-text">Weather Dashboard <a href='https://ashleydeyoung.github.io/weatherdashboard/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/weatherdashboard'>Repository</a></p>
-
-                </div>
-              </div>
-              <div class="col-12 col-md-6">
-                <div class="m-3 bg-light">
-                  <img class="img-fluid img-thumbnail" src="./assets/images/password.generator.application.png" alt="passwordgenerator">
-                  <p class="project-text">Password Generator <a href='https://ashleydeyoung.github.io/passwordgenerator/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/passwordgenerator'>Repository</a></p>
-
-                </div>
-              </div>
-              <div class="col-12 col-md-6">
-                <div class="m-3 bg-light">
-                  <img class="img-fluid img-thumbnail" src="./assets/images/workday-scheduler.png" alt="workday-scheduler">
-                  <p class="project-text">Day Planner<a href='https://ashleydeyoung.github.io/dayplanner/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/dayplanner'>Repository</a></p>
-
-                </div>
-              </div>
-              <div class="col-12 col-md-6">
-                <div class="m-3 bg-light">
-                  <img class="img-fluid img-thumbnail" src="./assets/images/burger-preview.png" alt="burger-app">
-                  <p class="project-text">Burger App<a href='https://frozen-beach-67804.herokuapp.com/'>Deployed Site</a></p><p class="project-text">GitHub: <a href='https://github.com/ashleydeyoung/burger'>Repository</a></p>
             </div>
-          </section> 
-        </div>   
-        
-        <div class="col-3"></div>
+            <div class="col-md-6">
+              <div class="m-3 bg-light">
+                <img
+                  class="img-fluid img-thumbnail"
+                  src="./assets/images/weather-dashboard.png"
+                  alt="weatherdashboards"
+                />
+                <p class="project-text">
+                  Weather Dashboard
+                  <a href="https://ashleydeyoung.github.io/weatherdashboard/"
+                    >Deployed Site</a
+                  >
+                </p>
+                <p class="project-text">
+                  GitHub:
+                  <a href="https://github.com/ashleydeyoung/weatherdashboard"
+                    >Repository</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="m-3 bg-light">
+                <img
+                  class="img-fluid img-thumbnail"
+                  src="./assets/images/password.generator.application.png"
+                  alt="passwordgenerator"
+                />
+                <p class="project-text">
+                  Password Generator
+                  <a href="https://ashleydeyoung.github.io/passwordgenerator/"
+                    >Deployed Site</a
+                  >
+                </p>
+                <p class="project-text">
+                  GitHub:
+                  <a href="https://github.com/ashleydeyoung/passwordgenerator"
+                    >Repository</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="m-3 bg-light">
+                <img
+                  class="img-fluid img-thumbnail"
+                  src="./assets/images/workday-scheduler.png"
+                  alt="workday-scheduler"
+                />
+                <p class="project-text">
+                  Day Planner <a
+                    href="https://ashleydeyoung.github.io/dayplanner/"
+                    >Deployed Site</a
+                  >
+                </p>
+                <p class="project-text">
+                  GitHub:
+                  <a href="https://github.com/ashleydeyoung/dayplanner"
+                    >Repository</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="m-3 bg-light">
+                <img
+                  class="img-fluid img-thumbnail"
+                  src="./assets/images/burger-preview.png"
+                  alt="burger-app"
+                />
+                <p class="project-text">
+                  Burger App <a href="https://frozen-beach-67804.herokuapp.com/"
+                    >Deployed Site</a
+                  >
+                </p>
+                <p class="project-text">
+                  GitHub:
+                  <a href="https://github.com/ashleydeyoung/burger"
+                    >Repository</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="m-3 bg-light">
+                <img
+                  class="img-fluid img-thumbnail"
+                  src="./assets/images/homePage.png"
+                  alt="school-spot-preview"
+                />
+                <p class="project-text">
+                  Project 2: School-Spot <a href="https://fast-beach-51043.herokuapp.com/"
+                    >Deployed Site</a
+                  >
+                </p>
+                <p class="project-text">
+                  GitHub:
+                  <a href="https://github.com/ashleydeyoung/School-Spot"
+                    >Repository</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </section> 
+    </section>
 
     <footer class="fixed-bottom">
-      <div class="bg-info text-white p-2">
+      <div class="colors text-white p-2">
         <div style="text-align: center; left: 0; bottom: 0; width: 100%;">
           Copyright 2020 Ashley DeYoung
         </div>
       </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
